--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "type": "module",
@@ -19,6 +20,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.1",
     "nodemon": "^3.1.10"
   }
 }
