feat: cria rota de create, select e delete

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PORT = 
 DATABASE_URL = https://console.neon.tech/app/projects
 NODE_ENV = development
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+CLERK_SECRET_KEY
